# emergence

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  nightly.yml
docs/superpowers/plans/: 2026-05-04-emergence-plan.md  2026-05-06-emergence-plan.md
docs/superpowers/specs/: 2026-05-04-emergence-design.md
src/: app.rs  lib.rs  main.rs  protocol.rs
src/commands/: clear.rs  compact_cmd.rs  config_cmd.rs  help.rs  mod.rs  model_cmd.rs  quit.rs  sessions_cmd.rs  skills_cmd.rs  tokens_cmd.rs  tools_cmd.rs
src/config/: agents_md.rs  mod.rs  settings.rs
src/hooks/: builtin.rs  mod.rs  shell.rs
src/llm/: message.rs  mod.rs  openai.rs  registry.rs
src/permissions/: mod.rs
src/session/: context.rs  mod.rs  store.rs  summarizer.rs
src/skills/: loader.rs  mod.rs
src/tools/: bash.rs  file.rs  mod.rs  search.rs  web.rs
src/tui/: markdown.rs  mod.rs  popups.rs  themes.rs  widgets.rs
src/utils/: env.rs  fuzzy.rs  mod.rs
tests/: commands_integration.rs  config_integration.rs  hooks_integration.rs  integration.rs  llm_integration.rs  protocol_integration.rs  session_integration.rs  skills_integration.rs  tools_integration.rs
tests/fixtures/: sample_settings.json
