[package]
name = "emergence"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
futures = "0.3"
regex = "1"
urlencoding = "2"
html-escape = "0.2"
pulldown-cmark = "0.12"
unicode-width = "0.2"

[dev-dependencies]
mockall = "0.12"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"
